Ensure the navigation list collapses gracefully.

--- a/app/assets/stylesheets/components/masthead.css.scss
+++ b/app/assets/stylesheets/components/masthead.css.scss
@@ -100,6 +100,10 @@
   @media screen and (max-width: 1300px) {
     .header__link-truncate { display: none; }
   }
+  @media screen and (max-width: 1200px) {
+    padding-left: 10px;
+    padding-left: 10px;
+  }
 }
 
 .masthead__link-anchor,
